--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
 				<li><a class="nav-text" href="about-me.html">Volunteer today</a></li>
 				<li class="button"><a id="support" href="portfolio.html">Support now</a></li>
 			</ul>
-
 		</nav>
 	</header>
 	<main>
+		<div class="hero-img">
+		</div>
+		<p>The Danish Society for Nature Conservation is Denmark’s largest green organisation with 130,000 members and over 1,500 volunteers. In addition, we are the only association in Denmark that can raise conservation issues and ensure Denmark’s nature for the future. We have already left traces in the landscape - today is approx. 5 percent of Denmark’s area namely protected.</p>
+
+		<p>But despite the name, the Danish Society for Nature Conservation is much more than nature conservation.</p>
 	</main>
 </body>
 
