nav and header style done

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 </head>
 
 <body>
-	<header>
+	<nav>
 		<img id="logo-nav" src="img/logo.png" alt="logo">
-		<nav>
-			<ul>
-				<li><a class="nav-text" href="index.html">Future events</a></li>
-				<li><a class="nav-text" href="about-me.html">Volunteer today</a></li>
-				<li class="button"><a id="support" href="portfolio.html">Support now</a></li>
-			</ul>
-		</nav>
-	</header>
+		<ul>
+			<li><a class="nav-text" href="index.html">Future events</a></li>
+			<li><a class="nav-text" href="about-me.html">Volunteer today</a></li>
+			<li class="button"><a id="support" href="portfolio.html">Support now</a></li>
+		</ul>
+	</nav>
 	<main>
-		<div class="hero-img">
-		</div>
-		<p>The Danish Society for Nature Conservation is Denmark’s largest green organisation with 130,000 members and over 1,500 volunteers. In addition, we are the only association in Denmark that can raise conservation issues and ensure Denmark’s nature for the future. We have already left traces in the landscape - today is approx. 5 percent of Denmark’s area namely protected.</p>
+		<div class="hero-img"></div>
+		<p>The Danish Society for Nature Conservation is Denmark’s largest green organisation with 130,000 members and
+			over 1,500 volunteers. In addition, we are the only association in Denmark that can raise conservation
+			issues and ensure Denmark’s nature for the future. We have already left traces in the landscape - today is
+			approx. 5 percent of Denmark’s area namely protected.</p>
 		<br>
 		<p>But despite the name, the Danish Society for Nature Conservation is much more than nature conservation.</p>
 		<table>
@@ -32,7 +32,9 @@
 					<img id="my-img" src="img/ocean-cleanup-group-7rQUllaIE1k-unsplash.jpg">
 				</td>
 				<td colspan="2" class="split-text">
-					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+						laboris nisi ut aliquip ex ea commodo consequat.</p>
 					<button></button>
 				</td>
 			</tr>
