--- a/index.html
+++ b/index.html
@@ -15,30 +15,47 @@
 		<ul>
 			<li><a class="nav-text" href="index.html">Future events</a></li>
 			<li><a class="nav-text" href="about-me.html">Volunteer today</a></li>
-			<li class="button"><a id="support" href="portfolio.html">Support now</a></li>
+			<li class="button"><a href="portfolio.html">Support now</a></li>
 		</ul>
 	</nav>
 	<main>
 		<div class="hero-img"></div>
-		<p>The Danish Society for Nature Conservation is Denmark’s largest green organisation with 130,000 members and
-			over 1,500 volunteers. In addition, we are the only association in Denmark that can raise conservation
-			issues and ensure Denmark’s nature for the future. We have already left traces in the landscape - today is
-			approx. 5 percent of Denmark’s area namely protected.</p>
+		<div id="intro-text">
+			<p>The Danish Society for Nature Conservation is Denmark’s largest green organisation with 130,000 members
+				and
+				over 1,500 volunteers. In addition, we are the only association in Denmark that can raise conservation
+				issues and ensure Denmark’s nature for the future. We have already left traces in the landscape - today
+				is
+				approx. 5 percent of Denmark’s area namely protected.</p>
+			<br>
+			<p>But despite the name, the Danish Society for Nature Conservation is much more than nature conservation.
+			</p>
+		</div>
 		<br>
-		<p>But despite the name, the Danish Society for Nature Conservation is much more than nature conservation.</p>
-		<table>
-			<tr>
-				<td colspan="2" class="split-img1">
-					<img id="my-img" src="img/ocean-cleanup-group-7rQUllaIE1k-unsplash.jpg">
-				</td>
-				<td colspan="2" class="split-text">
+		<div id="split-2b2">
+			<section>
+				<div class="split-img" style="background-image: url(img/ocean-cleanup-group-7rQUllaIE1k-unsplash.jpg);">
+				</div>
+				<div class="split-text">
 					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
 						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
 						laboris nisi ut aliquip ex ea commodo consequat.</p>
-					<button></button>
-				</td>
-			</tr>
-		</table>
+					<button class="button">Button</button>
+				</div>
+			</section>
+			<section>
+				<div class="split-text">
+					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+						laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<button class="button">CLICK ME!!!</button>
+				</div>
+				<div class="split-img" style="background-image: url(img/ocean-cleanup-group-7rQUllaIE1k-unsplash.jpg);">
+				</div>
+
+			</section>
+		</div>
+
 	</main>
 </body>
 
