--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
 
 			</section>
 		</div>
-
+		<iframe src="https://www.youtube.com/embed/npnSCgEHF6s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</main>
+	<footer>
+		<div id="logo-grid"></div>
+		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam, reprehenderit deleniti sunt quis voluptatibus libero magni veniam beatae ex quam rem unde! Sint nam excepturi, beatae odit quis, assumenda error neque distinctio dolor, modi minus. Dignissimos illum nulla similique libero cum placeat, eius laudantium error inventore odio quas, laboriosam aliquid?</p>
+	</footer>
 </body>
 
 </html>
