--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="style.css" rel="stylesheet">
 	<link href="nav.css" rel="stylesheet">
+	<link href="footer.css" rel="stylesheet">
 	<title>#TeamGreen</title>
 </head>
 
@@ -58,7 +59,11 @@
 		<iframe src="https://www.youtube.com/embed/npnSCgEHF6s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</main>
 	<footer>
-		<div id="logo-grid"></div>
+		<div id="logo-section">
+			<div class="horizontal-line"></div>
+			<img src="img/small-logo.png" alt="Logo">
+			<div class="horizontal-line"></div>
+		</div>
 		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam, reprehenderit deleniti sunt quis voluptatibus libero magni veniam beatae ex quam rem unde! Sint nam excepturi, beatae odit quis, assumenda error neque distinctio dolor, modi minus. Dignissimos illum nulla similique libero cum placeat, eius laudantium error inventore odio quas, laboriosam aliquid?</p>
 	</footer>
 </body>
