small design fixes

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	<nav>
 		<img id="logo-nav" src="img/logo.png" alt="logo">
 		<ul>
-			<li><a class="nav-text" href="index.html">Future events</a></li>
-			<li><a class="nav-text" href="about-me.html">Volunteer today</a></li>
-			<li class="button"><a href="portfolio.html">Support now</a></li>
+			<li><a class="nav-text" href="#">Future events</a></li>
+			<li><a class="nav-text" href="#">Volunteer today</a></li>
+			<li class="button"><a href="#">Support now</a></li>
 		</ul>
 	</nav>
 	<main>
