split into 2 separate pages

--- a/index.html
+++ b/index.html
@@ -11,52 +11,17 @@
 </head>
 
 <body>
+	<main>
 	<nav>
 		<img id="logo-nav" src="img/logo.png" alt="logo">
 		<ul>
-			<li><a class="nav-text" href="#">Future events</a></li>
-			<li><a class="nav-text" href="#">Volunteer today</a></li>
+			<li><a class="nav-text" href="future-events.html">Future events</a></li>
+			<li><a class="nav-text" href="index.html">Volunteer today</a></li>
 			<li class="button"><a href="#">Support now</a></li>
 		</ul>
 	</nav>
-	<main>
-		<div class="hero-img"></div>
-		<div id="intro-text">
-			<p>The Danish Society for Nature Conservation is Denmark’s largest green organisation with 130,000 members
-				and
-				over 1,500 volunteers. In addition, we are the only association in Denmark that can raise conservation
-				issues and ensure Denmark’s nature for the future. We have already left traces in the landscape - today
-				is
-				approx. 5 percent of Denmark’s area namely protected.</p>
-			<br>
-			<p>But despite the name, the Danish Society for Nature Conservation is much more than nature conservation.
-			</p>
-		</div>
-		<br>
-		<div id="split-2b2">
-			<section>
-				<div class="split-img" style="background-image: url(img/ocean-cleanup-group-7rQUllaIE1k-unsplash.jpg);">
-				</div>
-				<div class="split-text">
-					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-						laboris nisi ut aliquip ex ea commodo consequat.</p>
-					<button class="button">Button</button>
-				</div>
-			</section>
-			<section>
-				<div class="split-text">
-					<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-						laboris nisi ut aliquip ex ea commodo consequat.</p>
-					<button class="button">CLICK ME!!!</button>
-				</div>
-				<div class="split-img" style="background-image: url(img/ocean-cleanup-group-7rQUllaIE1k-unsplash.jpg);">
-				</div>
-
-			</section>
-		</div>
-		<iframe src="https://www.youtube.com/embed/npnSCgEHF6s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	
+		<iframe src="https://www.youtube.com/embed/LfO3-znesEg" frameborder="0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</main>
 	<footer>
 		<div id="logo-section">
@@ -64,8 +29,8 @@
 			<img src="img/small-logo.png" alt="Logo">
 			<div class="horizontal-line"></div>
 		</div>
-		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam, reprehenderit deleniti sunt quis voluptatibus libero magni veniam beatae ex quam rem unde! Sint nam excepturi, beatae odit quis, assumenda error neque distinctio dolor, modi minus. Dignissimos illum nulla similique libero cum placeat, eius laudantium error inventore odio quas, laboriosam aliquid?</p>
+		<p></p>
 	</footer>
-</body>
 
-</html>
+	</body>
+	
